tests/baselines/reference/YieldExpression12_es6.errors.txt
YieldExpression12_es6.ts(3,6): error TS1163: A 'yield' expression is only allowed in a generator body.


==== YieldExpression12_es6.ts (1 errors) ====
    class C {
      constructor() {
         yield foo
         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }